2008-11-06  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib_threads/extUnixThreads.ml: replaced [Std] with [Extlib.Std]

	* tests/Makefile: targets [all], [byte], [opt] removed, targets [bytelib] and [optlib] added
	
	* src/batteries_toolchain/batteries_help.ml: occurrences of [Batteries_config] replaced with [Toolchain.Sysconfig]

	* src/core/batteries_core_threads.ml: module [Toolchain.Sysconfig] added

	* src/core/batteries_core.ml: module [Toolchain.Sysconfig] added

2008-11-05  David Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/html/about.html (simple): Added a few lines on CDK

	* src/batteries_toolchain/batteries_help.ml: Fixed typo in a string

2008-11-05  David Teller  <David.Teller@univ-orleans.fr>

	* src/batteries_toolchain/ocamlcp: created
	
	* src/batteries_toolchain/ocamlc: created

	* src/batteries_toolchain/ocaml: renamed from bocaml

	* src/batteries_toolchain/ocaml: now using [ocamlfind]

	* src/core/batteries_toolchain: renamed from src/core/toplevel

2008-11-05  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib_threads/: created

	* src/core/extlib_threads.mlpack: created

	* src/main/threads/batteries.mllib: [InnerWeaktbl] added

	* src/main/nothreads/batteries.mllib: [InnerWeaktbl] added

	* src/core/batteries_core.ml: [Unix] is now [Extlib.ExtUnix.Unix]

	* src/core/extlib/innerWeaktbl.ml*: added

	* src/core/extlib/extUnix.ml*: added

	* src/core/extlib.mlpack: [ExtUnix] added

2008-11-04  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/innerIO.ml*: [close_all] added

	* src/core/extlib/extPervasives.ml: [flush_all] now uses [IO.flush_all]

	* src/core/extlib/extPervasives.ml: [flush_all] now called automatically when exiting

	* src/core/extlib/IO.mli: [flush_all] added

	* src/core/extlib/innerIO.ml: [outputs], [Outputs] added
	
	* src/core/extlib/innerIO.ml: [create_out] now adds a call to [flush] before the call to [close]
